--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v3
 
+      - name: Limpar ambientes antigos
+        run: sudo rm -rf /opt/hostedtoolcache/Python/*
+
       - name: Instalar Python
         uses: actions/setup-python@v4
         with:
