--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,9 @@ jobs:
       - name: Instalar dependências
         run: |
           python -m pip install --upgrade pip
-          pip install --no-cache-dir --force-reinstall --upgrade pandas-ta==0.3.14b -r requirements.txt
+          pip install --no-cache-dir --force-reinstall -r requirements.txt
+          pip install pandas-ta
+
 
 
       - name: Executar alerta
