--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --no-cache-dir --force-reinstall -r requirements.txt
-          pip install pandas-ta
-
+          pip install git+https://github.com/twopirllc/pandas-ta
 
 
       - name: Executar alerta
