--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --no-cache-dir --force-reinstall -r requirements.txt
-          pip install git+https://github.com/twopirllc/pandas-ta
+          pip install "git+https://github.com/twopirllc/pandas-ta"
 
 
       - name: Executar alerta
