--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,9 @@ jobs:
       - name: Instalar dependências
         run: |
           python -m pip install --upgrade pip
-          pip install "git+https://github.com/twopirllc/pandas-ta"
+          pip install git+https://github.com/twopirllc/pandas-ta
           pip install --no-cache-dir --force-reinstall -r requirements.txt
+
 
 
       - name: Executar alerta
