--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ pandas==1.5.3
 numpy==1.23.5
 requests
 python-telegram-bot==13.15
-git+https://github.com/twopirllc/pandas-ta
+git+https://github.com/twopirllc/pandas-ta.git#egg=pandas-ta
