--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,9 @@ jobs:
 
       - name: Instalar dependências
         run: |
+          sudo apt-get update && sudo apt-get install -y git
           python -m pip install --upgrade pip
           pip install --no-cache-dir --force-reinstall -r requirements.txt
-
-
 
       - name: Executar alerta
         env:
