--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,9 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install -y git
           python -m pip install --upgrade pip
+          pip install git+https://github.com/twopirllc/pandas-ta.git
           pip install --no-cache-dir --force-reinstall -r requirements.txt
+
 
       - name: Executar alerta
         env:
